[gd_scene load_steps=5 format=2]

[ext_resource path="res://loot/AlienJuuice.gd" type="Script" id=1]
[ext_resource path="res://loot/Bottle.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.6393
height = 10.8302

[sub_resource type="Animation" id=3]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[node name="AlienJuice" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_AlienJuice_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
